Small editing, removing a few words

--- a/index.html
+++ b/index.html
@@ -255,47 +255,47 @@
 								<section>
 									<span class="icon style2 major fa-gem"></span>
 									<h3>Visa</h3>
-									<p>Visa-free access to nearly 150 countries and territories worldwide, including the United Kingdom, European Union, Hong Kong and Singapore, ease of residency applications in <b>CARICOM</b> member countries, as well as opportunities to travel (or even potentially work) in any of the <b>OECS</b> member states.</p>
+									<p>Visa-free access to nearly 150 countries and territories worldwide, including the United Kingdom, European Union (Schengen Area), Hong Kong and Singapore, ease of residency applications in <b>CARICOM</b> member countries, as well as opportunities to travel (or even potentially work) in any of the <b>OECS</b> member states.</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-save"></span>
 									<h3>Required Residency</h3>
-									<p>There is no requirement to live or reside in Saint Kitts and Nevis, but you are entitled to live there, as such residency is <b>optional</b> and not mandatory, there are no visitation requirements to apply and obtain the Saint Kitts and Nevis citizenship, and the jurisdiction freely permits dual/multiple citizenship</p>
+									<p>There is no requirement to live or reside in Saint Kitts and Nevis, but you are entitled to live there, as such residency is <b>optional</b> and not mandatory, there are no visitation requirements to apply and obtain the Saint Kitts and Nevis citizenship, and the jurisdiction permits dual/multiple citizenship.</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-chart-bar"></span>
 									<h3>Dependents</h3>
-									<p>You, your spouse, your dependents (depending on age and economical relationship <b>siblings</b>, <b>children</b>, <b>parents</b>, etc.) as well as your <b>descendants</b> can enjoy citizenship for life, family members can also be added later</p>
+									<p>You, your spouse, your dependents (depending on age and economical relationship <b>siblings</b>, <b>children</b>, <b>parents</b>, etc.) as well as your <b>descendants</b> can enjoy citizenship for life, family members can also be added later.</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-wifi"></span>
 									<h3>Discretion</h3>
-									<p>Discretion with respect to citizenship, ensuring that one’s citizenship status is not disclosed to third parties, as such this represents a short term investment in exchange for a lifetime multigenerational citizenship, and a potential safety net for the family in an unpredictable word</p>
+									<p>Discretion with respect to citizenship, ensuring that one’s citizenship status is not disclosed to third parties, the program respresents a short term investment in exchange for a lifetime multigenerational citizenship, and a potential safety net for the family in an unpredictable word.</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-cog"></span>
 									<h3>Stability</h3>
-									<p>A low tax regime, exempting taxes on worldwide income, capital gains and inheritance, security and peace of mind of being a citizen of a country with a stable government and economy. Saint Kitts and Nevis citizens are fluent English speakers, providing ease of traveling along with increased chances of visa approvals</p>
+									<p>A low tax regime, exempting taxes on worldwide income, capital gains and inheritance, security and peace of mind of being a citizen of a country with a stable government and economy, Saint Kitts and Nevis citizens are fluent English speakers, providing ease of traveling along with increased chances of visa approvals.</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-paper-plane"></span>
 									<h3>Wealth Management</h3>
-									<p>An environment conducive to starting a business, managing wealth and nurturing an investment, the ability to own property in multiple jurisdictions, giving family legacy with rights such as citizenship by descent, granting greater future educational opportunities for children</p>
+									<p>An environment conducive to starting a business, managing wealth and nurturing an investment, the ability to own property in multiple jurisdictions, giving family legacy with rights such as citizenship by descent, granting greater future educational opportunities for children.</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-desktop"></span>
 									<h3>Efficient Process</h3>
-									<p>A hassle-free and efficient application process, which rapidly confirms the outcome of your application. There are no requirements for previous investor or business experience, nor English language proficiency, or for attending any interview at any stage during the application process</p>
+									<p>A hassle-free and efficient application process, which rapidly confirms the outcome of your application. There are no requirements for previous investor or business experience, nor English language proficiency, or for attending any interview at any stage during the application process.</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-sync-alt"></span>
 									<h3>Accelerated Process</h3>
-									<p>There is also an Accelerated Application Process (AAP) approved by the Government of Saint Kitts and Nevis which allows applications to be fast-tracked. Interested applicants will still be required to meet all criteria and submit the necessary documents</p>
+									<p>There is also an Accelerated Application Process (AAP) approved by the Government of Saint Kitts and Nevis which allows applications to be fast-tracked. Interested applicants will still be required to meet all criteria and submit the necessary documents.</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-hashtag"></span>
 									<h3>Pristine Environment</h3>
-									<p>Saint Kitts and Nevis is well known and famous for its beautiful beaches, pristine tropical forests and friendly locals, Saint Kitts and Nevis is also very safe, walkable and has great weather</p>
+									<p>Saint Kitts and Nevis is well known and famous for its beautiful beaches, pristine tropical forests and friendly locals, Saint Kitts and Nevis is also very safe, walkable and has great weather.</p>
 								</section>
 							</div>
 							<ul class="actions stacked">
