Icon solid style2 major fa-leaf instead of hashtag

--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
 									<p>There is also an Accelerated Application Process (AAP) approved by the Government of Saint Kitts and Nevis which allows applications to be fast-tracked. Interested applicants will still be required to meet all criteria and submit the necessary documents.</p>
 								</section>
 								<section>
-									<span class="icon solid style2 major fa-hashtag"></span>
+									<span class="icon solid style2 major fa-leaf"></span>
 									<h3>Pristine Environment</h3>
 									<p>Saint Kitts and Nevis is well known and famous for its beautiful beaches, pristine tropical forests and friendly locals, Saint Kitts and Nevis is also very safe, walkable and has great weather.</p>
 								</section>
