--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 								<section>
 									<span class="icon style2 major fa-gem"></span>
 									<h3>Visa</h3>
-									<p>Visa-free access to nearly 150 countries and territories worldwide, including the United Kingdom (for 6 months for tourism, business conferences, family and friends, etc), European Union (<a href="https://www.schengenvisainfo.com/schengen-visa-countries-list">Schengen Area</a> countries such as <b>Switzerland</b>, for a period of 90 days per 180-day period), Hong Kong, Singapore, etc., ease of residency applications in all <b><a href="https://caricom.org/member-states-and-associate-members">CARICOM</a></b> member countries, as well as opportunities to travel (or even work) in any of the <b><a href="https://www.oecs.org/en/who-we-are/about-us">OECS</a></b> member states.</p>
+									<p>Visa-free access to nearly 150 countries and territories worldwide, including the United Kingdom (for 6 months for tourism, business conferences, family and friends, etc), European Union (<a href="https://www.schengenvisainfo.com/schengen-visa-countries-list" target="_blank">Schengen Area</a> countries such as <b>Switzerland</b>, for a period of 90 days per 180-day period), Hong Kong, Singapore, etc., ease of residency applications in all <b><a href="https://caricom.org/member-states-and-associate-members" target="_blank">CARICOM</a></b> member countries, as well as opportunities to travel (or even work) in any of the <b><a href="https://www.oecs.org/en/who-we-are/about-us" target="_blank">OECS</a></b> member states.</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-save"></span>
