--- a/index.html
+++ b/index.html
@@ -73,8 +73,7 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Business Practices</h2>
-							<p>Our firm specializes in the processing of citizenship applications directly in Saint Kitts and Nevis, enabling us to be apprised of all new developments, so our clients are always well-informed in advance of any changes, and can rely on our support and expertise throughout the procedure.</p>
-							<p>If your current nationality is limiting your ability to freely travel, bank, invest or feel secure, a second citizenship/passport will open up a world of new possibilities for you and your family. Qualified applicants can enjoy greater freedom and increased stability for themselves, their spouse, and any number of dependent (children, siblings, parents, etc).</p>
+							<p>Our firm specializes in the processing of citizenship applications directly in Saint Kitts and Nevis, enabling us to be apprised of all new developments, so our clients are always well-informed in advance of any changes, and can rely on our support and expertise throughout the procedure.<br>Our team also offers <u><b>full linguistic support</b></u> throughout the application process and until completion in the following languages: <b>English, French, Japanese, Spanish, and Chinese</b>.<br>If your current nationality is limiting your ability to freely travel, bank, invest or feel secure, a second citizenship/passport will open up a world of new possibilities for you and your family. Qualified applicants can enjoy greater freedom and increased stability for themselves, their spouse, and any number of dependent (children, siblings, parents, etc).</p>
 							<ul class="actions stacked">
 								<li><a href="#contact" class="button big wide smooth-scroll-middle">Learn More</a></li>
 							</ul>
@@ -254,7 +253,7 @@
 							<div class="items style1 medium onscroll-fade-in">
 								<section>
 									<span class="icon style2 major fa-gem"></span>
-									<h3>Visa</h3>
+									<h3>Ease of Traveling</h3>
 									<p>Visa-free access to nearly 150 countries and territories worldwide, including the United Kingdom (for 6 months for tourism, business conferences, family and friends, etc), European Union (<a href="https://www.schengenvisainfo.com/schengen-visa-countries-list" target="_blank">Schengen Area</a> countries such as <b>Switzerland</b>, for a period of 3 months during a 6 months period, following the date of first entry in the Schengen Area, ETIAS required since 2023), Hong Kong, Singapore, etc., ease of residency applications in all <b><a href="https://caricom.org/member-states-and-associate-members" target="_blank">CARICOM</a></b> member countries, as well as opportunities to travel (or even work) in any of the <b><a href="https://www.oecs.org/en/who-we-are/about-us" target="_blank">OECS</a></b> member states.</p>
 								</section>
 								<section>
@@ -270,7 +269,7 @@
 								<section>
 									<span class="icon solid style2 major fa-wifi"></span>
 									<h3>Discretion</h3>
-									<p>Discretion with respect to citizenship, ensuring that one’s citizenship status is not disclosed to third parties, the program respresents a short term investment in exchange for a lifetime multigenerational citizenship, and a potential safety net for the family in an unpredictable word.</p>
+									<p>Discretion with respect to citizenship, ensuring that one’s citizenship status is not disclosed to third parties, the program represents a short-term investment in exchange for a lifetime multigenerational citizenship, and a potential safety net for the family in an unpredictable word.</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-cog"></span>
