--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Business Practices</h2>
-							<p>Our firm specializes in the processing of citizenship applications directly in Saint Kitts and Nevis, enabling us to be apprised of all new developments, so our clients are always well-informed in advance of any changes, and can rely on our support and expertise throughout the procedure.<br>Our team also offers <u><b>full linguistic support</b></u> throughout the application process and until completion in the following languages: <b>English, French, Japanese, Spanish, and Chinese</b>.<br>If your current nationality is limiting your ability to freely travel, bank, invest or feel secure, a second citizenship/passport will open up a world of new possibilities for you and your family. Qualified applicants can enjoy greater freedom and increased stability for themselves, their spouse, and any number of dependent (children, siblings, parents, etc).</p>
+							<p>Our firm specializes in the processing of citizenship applications directly in Saint Kitts and Nevis, enabling us to be apprised of all new developments, so our clients are always well-informed in advance of any changes, and can rely on our support and expertise throughout the procedure.</p>
+							<p>Our team also offers <u><b>full linguistic support</b></u> throughout the application process and until completion in the following languages: <b>English, French, Japanese, Spanish, and Chinese</b>.</p>
+							<p>If your current nationality is limiting your ability to freely travel, bank, invest or feel secure, a second citizenship/passport will open up a world of new possibilities for you and your family. Qualified applicants can enjoy greater freedom and increased stability for themselves, their spouse, and any number of dependent (children, siblings, parents, etc).</p>
 							<ul class="actions stacked">
 								<li><a href="#contact" class="button big wide smooth-scroll-middle">Learn More</a></li>
 							</ul>
@@ -87,7 +89,7 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Successful Track Record</h2>
-							<p>Our team already has a lengthy proven track-record of applicants, and we have assisted numerous clients from around the world, including jurisdictions such as <b>Lebanon</b>, <b>Nigeria</b>, <b>Germany</b>, <b>Japan</b>, etc., to obtain citizenship.
+							<p>Our team already has a lengthy proven track-record of applicants, and we have assisted numerous clients from around the world, including jurisdictions such as <b>Lebanon</b>, <b>Nigeria</b>, <b>Libya</b>, <b>Germany</b>, <b>Japan</b>, etc., to obtain citizenship.</p>
 							<p>Our team also facilitates citizenship applications in any country that currently offers reputable economic citizenship programs <br>(including <i>Saint Lucia</i>, <i>Antigua and Barbuda</i>, <i>Dominica</i>, <i>Grenada</i>, <i>Turkey</i>, <i>Malta</i>, and <i>Vanuatu</i>).</p>
 						</div>
 
