--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 				<!-- One -->
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
-							<h1 id="title">CITIZENSHIP</h1>
-							<p class="major">BY INVESTMENT PROGRAMME</p>
+							<h1 id="banner-title">CITIZENSHIP</h1>
+							<p class="major" id="banner-body">BY INVESTMENT PROGRAMME</p>
 							<ul class="actions stacked">
-								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
+								<li><a href="#first" class="button big wide smooth-scroll-middle" id="banner-button">Get Started</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -44,10 +44,10 @@
 				<!-- Two -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
-							<h2>Saint Kitts and Nevis Citizenship</h2>
-							<p>The Saint Kitts and Nevis Citizenship by Investment Program was <b>established in 1984</b>, making it the oldest program of this kind in the world. In close to 40 years of operation, it has distinguished itself by its investment options and due diligence procedures. To this day, Saint Kitts and Nevis remains the world’s most reputable jurisdiction for the conferral of citizenship by investment.</p>
+							<h2 id="citizenship-title">Saint Kitts and Nevis Citizenship</h2>
+							<p id="citizenship-body">The Saint Kitts and Nevis Citizenship by Investment Program was <b>established in 1984</b>, making it the oldest program of this kind in the world. In close to 40 years of operation, it has distinguished itself by its investment options and due diligence procedures. To this day, Saint Kitts and Nevis remains the world’s most reputable jurisdiction for the conferral of citizenship by investment.</p>
 							<ul class="actions stacked">
-								<li><a href="#contact" class="button big wide smooth-scroll-middle">Learn More</a></li>
+								<li><a href="#contact" class="button big wide smooth-scroll-middle" id="citizenship-button">Learn More</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -58,10 +58,10 @@
 				<!-- Three -->
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Jurisdiction</h2>
-							<p>Saint Kitts and Nevis, also known as <b>‘Saint Christopher and Nevis’</b> forms part of the group of islands known as the Lesser Antilles, located some 2,000 km to the southeast of the state of Florida. Saint Kitts and Nevis was home to the first British and French colonies in the Caribbean, and thus has also been titled "The Mother Colony of the West Indies". The country has beautiful beaches, reefs, wonderful cool climate, enjoyable throughout the year. The country is also well connected by easy and <b>direct flights</b> from Europe, Canada, multiple cities in the US, and most Caribbean airliners.</p>
+							<h2 id="jurisdiction-title">Jurisdiction</h2>
+							<p id="jurisdiction-body">Saint Kitts and Nevis, also known as <b>‘Saint Christopher and Nevis’</b> forms part of the group of islands known as the Lesser Antilles, located some 2,000 km to the southeast of the state of Florida. Saint Kitts and Nevis was home to the first British and French colonies in the Caribbean, and thus has also been titled "The Mother Colony of the West Indies". The country has beautiful beaches, reefs, wonderful cool climate, enjoyable throughout the year. The country is also well connected by easy and <b>direct flights</b> from Europe, Canada, multiple cities in the US, and most Caribbean airliners.</p>
 							<ul class="actions stacked">
-								<li><a href="#contact" class="button big wide smooth-scroll-middle">Learn More</a></li>
+								<li><a href="#contact" class="button big wide smooth-scroll-middle" id="jurisdiction-button">Learn More</a></li>
 							</ul>
 						</div>
 						<div class="image">
