--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<body class="is-preload" onload="setInitialLanguage()">
 		
 		<div id="language-switcher">
-  			<select id="language-selector" onchange="switchLanguage(this.value)">
+  			<select id="language-selector">
     			<option value="en">English</option>
     			<option value="fr">Français</option>
     			<option value="sp">Español</option>
