--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Successful Track Record</h2>
-							<p>Our team already has a lengthy proven track-record of applicants, and we have assisted numerous clients from around the world, including jurisdictions such as <b>Lebanon</b>, <b>Nigeria</b>, <b>Libya</b>, <b>Germany</b>, <b>Japan</b>, etc., to obtain citizenship.</p>
+							<p>Our team already has a lengthy proven track-record of applicants, and we have assisted numerous clients from around the world, including jurisdictions such as <b>Lebanon</b>, <b>Nigeria</b>, <b>Canada</b>, <b>Libya</b>, <b>Germany</b>, <b>Japan</b>, etc., to obtain citizenship.</p>
 							<p>Our team also facilitates citizenship applications in any country that currently offers reputable economic citizenship programs <br>(including <i>Saint Lucia</i>, <i>Antigua and Barbuda</i>, <i>Dominica</i>, <i>Grenada</i>, <i>Turkey</i>, <i>Malta</i>, and <i>Vanuatu</i>).</p>
 						</div>
 
@@ -291,7 +291,7 @@
 								<section>
 									<span class="icon solid style2 major fa-sync-alt"></span>
 									<h3>Accelerated Process</h3>
-									<p>There is also an Accelerated Application Process (AAP) approved by the Government of Saint Kitts and Nevis which allows applications to be fast-tracked. Interested applicants will still be required to meet all criteria and submit the necessary documents.</p>
+									<p>There is also an <b>Accelerated Application Process (AAP)</b> approved by the Government of Saint Kitts and Nevis which allows applications to be fast-tracked. Interested applicants will still be required to meet all criteria and submit the necessary documents.</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-leaf"></span>
@@ -317,9 +317,11 @@
 								
 								<!-- Definition List -->
 									<section>
+								<!--
 										<header>
 											<h3>Questions:</h3>
 										</header>
+								-->
 										<div class="content">
 
 											<dl>
