--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>CITIZENSHIP BY INVESTMENT PROGRAMMEP</title>
+		<title>CITIZENSHAP BY INVESTMENT PROGRAMMEP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -276,7 +276,7 @@
 								<section>
 									<span class="icon solid style2 major fa-cog"></span>
 									<h3>Stability</h3>
-									<p>A low tax regime, exempting taxes on worldwide income, capital gains and inheritance, security and peace of mind of being a citizen of a country with a stable government and economy, Saint Kitts and Nevis citizens are fluent English speakers, providing ease of traveling along with increased chances of visa approvals.</p>
+									<p>A low tax regime, exempting taxes on worldwide income, capital gains and inheritance, security and peace of mind of being a citizen of a country with a stable government and economy, Saint Kitts and Nevis citizens are fluent English speakers, providing ease of traveling along with increased chances of international visa approvals.</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-paper-plane"></span>
