--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Successful Track Record</h2>
-							<p>Our team already has a lengthy proven track-record of applicants, and we have assisted numerous clients from around the world, including jurisdictions such as <b>Lebanon</b>, <b>Nigeria</b>, <b>Canada</b>, <b>Libya</b>, <b>Germany</b>, <b>Japan</b>, etc., to obtain citizenship.</p>
+							<p>Our team already has a lengthy proven track-record of applicants, and we have assisted numerous clients from around the world, including applicants from jurisdictions such as <b>Lebanon</b>, <b>Nigeria</b>, <b>Canada</b>, <b>Libya</b>, <b>Germany</b>, <b>Japan</b>, etc., to obtain citizenship.</p>
 							<p>Our team also facilitates citizenship applications in any country that currently offers reputable economic citizenship programs <br>(including <i>Saint Lucia</i>, <i>Antigua and Barbuda</i>, <i>Dominica</i>, <i>Grenada</i>, <i>Turkey</i>, <i>Malta</i>, and <i>Vanuatu</i>).</p>
 						</div>
 
@@ -327,7 +327,7 @@
 											<dl>
 												<dt>1. What are the requirements of becoming a Saint Kitts and Nevis citizen by investment?</dt>
 												<dd>
-													<p>The main applicant must be at least eighteen (18) years of age, must have made an investment in the prescribed amount, and must meet other application requirements.</p>
+													<p>The main applicant (often abbreviated “MA” during the process) must be at least eighteen (18) years of age, must have made an investment in the prescribed amount, and must meet other application requirements.</p>
 												</dd>
 												<dt>2. Can I contact the Citizenship by Investment Unit (CIU) directly?</dt>
 												<dd>
