--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 						<div class="content">
 							<h2>Business Practices</h2>
 							<p>Our firm specializes in the processing of citizenship applications directly in Saint Kitts and Nevis, enabling us to be apprised of all new developments, so our clients are always well-informed in advance of any changes, and can rely on our support and expertise throughout the procedure.</p>
-							<p>Our team also offers <u><b>full linguistic support</b></u> throughout the application process and until completion in the following languages: <b>English, French, Japanese, Spanish, and Chinese</b>.</p>
+							<p>Our team also offers <b>full linguistic support</b> throughout the application process and until completion in the following languages: <b>English, French, Japanese, Spanish, and Chinese</b>.</p>
 							<p>If your current nationality is limiting your ability to freely travel, bank, invest or feel secure, a second citizenship/passport will open up a world of new possibilities for you and your family. Qualified applicants can enjoy greater freedom and increased stability for themselves, their spouse, and any number of dependent (children, siblings, parents, etc).</p>
 							<ul class="actions stacked">
 								<li><a href="#contact" class="button big wide smooth-scroll-middle">Learn More</a></li>
@@ -329,13 +329,13 @@
 												<dd>
 													<p>The main applicant (often abbreviated “MA” during the process) must be at least eighteen (18) years of age, must have made an investment in the prescribed amount, and must meet other application requirements.</p>
 												</dd>
-												<dt>2. Can I contact the Citizenship by Investment Unit (CIU) directly?</dt>
+												<dt>2. Can I contact the "Citizenship by Investment Unit" (CIU) directly?</dt>
 												<dd>
-													<p>No, the CIU only engages with ‘Authorized Persons’. An ‘Authorized Person’ is an individual or entity approved by the Financial Services Regulatory Commission (FRSC) of Saint Kitts and Nevis licensed to conduct corporate or trust services in Saint Kitts and Nevis. An ‘Authorized Person’ is appointed by the main applicant by way of Limited Power of Attorney to act on their behalf in relation to all matters regarding their Citizenship by Investment application. The ‘Authorized Person’ is required to provide professional advice, assist and give details regarding the process and help with the preparation and submission of an application for Citizenship by investment and its supporting documents. The ‘Authorized Person’ will communicate with the Citizenship by Investment Unit and maintain a point of contact to review all matters surrounding the application, make payments and submit and collect all important correspondences.</p>
+													<p>No, the CIU limits its communication to ‘Authorized Persons’. An ‘Authorized Person’ is an individual or entity approved by the Financial Services Regulatory Commission (FRSC) of Saint Kitts and Nevis licensed to conduct corporate or trust services in Saint Kitts and Nevis. An ‘Authorized Person’ is appointed by the main applicant by way of Limited Power of Attorney to act on their behalf in relation to all matters regarding their Citizenship by Investment application. The ‘Authorized Person’ is required to provide professional advice, assist and give details regarding the process and help with the preparation and submission of an application for Citizenship by investment and its supporting documents. The ‘Authorized Person’ will communicate with the Citizenship by Investment Unit and maintain a point of contact to review all matters surrounding the application, make payments and submit and collect all important correspondences.</p>
 												</dd>
 												<dt>3. Are the application forms available online?</dt>
 												<dd>
-													<p>No, the application forms for Citizenship by Investment can only be obtained and submitted to the Citizenship by Investment Unit by an ‘Authorized Person’.</p>
+													<p>No, the application forms for Citizenship by Investment can only be obtained and also sdubmitted to the Citizenship by Investment Unit by an ‘Authorized Person’.</p>
 												</dd>
 												<dt>4. How long does the application process take?</dt>
 												<dd>
