--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 								<section>
 									<span class="icon style2 major fa-gem"></span>
 									<h3>Ease of Traveling</h3>
-									<p>Visa-free access to nearly 150 countries and territories worldwide, including the United Kingdom (for 6 months for tourism, business conferences, family and friends, etc), European Union (<a href="https://www.schengenvisainfo.com/schengen-visa-countries-list" target="_blank">Schengen Area</a> countries such as <b>Switzerland</b>, for a period of 3 months during a 6 months period, following the date of first entry in the Schengen Area, ETIAS required since 2023), Hong Kong, Singapore, etc., ease of residency applications in all <b><a href="https://caricom.org/member-states-and-associate-members" target="_blank">CARICOM</a></b> member countries, as well as opportunities to travel (or even work) in any of the <b><a href="https://www.oecs.org/en/who-we-are/about-us" target="_blank">OECS</a></b> member states.</p>
+									<p>Visa-free access to nearly 150 countries, including the United Kingdom (6 months for tourism, conferences, family and friends, etc), European Union (<a href="https://www.schengenvisainfo.com/schengen-visa-countries-list" target="_blank">Schengen Area</a> such as <b>Switzerland</b>, for a period of 3 months during a 6 months period, after the date of first entry in the Schengen Area, ETIAS required since 2023), Hong Kong, Singapore, etc., ease of residency applications in all <b><a href="https://caricom.org/member-states-and-associate-members" target="_blank">CARICOM</a></b> member countries, as well as opportunities to travel (or even work) in any of the <b><a href="https://www.oecs.org/en/who-we-are/about-us" target="_blank">OECS</a></b> member states.</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-save"></span>
@@ -286,7 +286,7 @@
 								<section>
 									<span class="icon solid style2 major fa-desktop"></span>
 									<h3>Efficient Process</h3>
-									<p>A hassle-free and efficient application process, which rapidly confirms the outcome of your application. There are no requirements for previous investor or business experience, nor English language proficiency, or for attending any interview at any stage during the application process.</p>
+									<p>A hassle-free and <b>efficient application process</b>, which rapidly confirms the outcome of your application. There are no requirements for previous investor or business experience, nor English language proficiency, or for attending any interview at any stage during the application process.</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-sync-alt"></span>
@@ -339,7 +339,7 @@
 												</dd>
 												<dt>4. How long does the application process take?</dt>
 												<dd>
-													<p>The application process may take as little as 60~90 days but may be delayed depending on the profile of the applicant. Applicants will be kept informed of the status of their applications through their ‘Authorized Person’.</p>
+													<p>The application process may take as little as 60~90 days (counting from the submission and acceptance of all documents) but may be delayed depending on the profile of the applicant. Applicants will be kept informed regularly of the status of their applications through their ‘Authorized Person’.</p>
 												</dd>
 												<dt>5. Can I submit my application in a language other than English?</dt>
 												<dd>
