--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 								<section>
 									<span class="icon solid style2 major fa-leaf"></span>
 									<h3>Pristine Environment</h3>
-									<p>Saint Kitts and Nevis is well known and famous for its beautiful beaches, pristine tropical forests and friendly locals, Saint Kitts and Nevis is also very safe, walkable and has great weather.</p>
+									<p>Saint Kitts and Nevis, an independent member of the <b>Commonwealth</b> since 1983 following independence from Britain, is well known and famous for its beautiful beaches, pristine tropical forests and friendly locals, Saint Kitts and Nevis is also very safe, walkable and has great weather.</p>
 								</section>
 							</div>
 							<ul class="actions stacked">
