added business tags

--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
 				<!-- Four -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Business Practices</h2>
-							<p>Our firm specializes in the processing of citizenship applications directly in Saint Kitts and Nevis, enabling us to be apprised of all new developments, so our clients are always well-informed in advance of any changes, and can rely on our support and expertise throughout the procedure.</p>
-							<p>Our team also offers <b>full linguistic support</b> throughout the application process and until completion in the following languages: <b>English, French, Japanese, Spanish, and Chinese</b>.</p>
-							<p>If your current nationality is limiting your ability to freely travel, bank, invest or feel secure, a second citizenship/passport will open up a world of new possibilities for you and your family. Qualified applicants can enjoy greater freedom and increased stability for themselves, their spouse, and any number of dependent (children, siblings, parents, etc).</p>
+							<h2 id="business-title">Business Practices</h2>
+							<p id="business-body-one">Our firm specializes in the processing of citizenship applications directly in Saint Kitts and Nevis, enabling us to be apprised of all new developments, so our clients are always well-informed in advance of any changes, and can rely on our support and expertise throughout the procedure.</p>
+							<p id="business-body-two">Our team also offers <b>full linguistic support</b> throughout the application process and until completion in the following languages: <b>English, French, Japanese, Spanish, and Chinese</b>.</p>
+							<p id="business-body-three">If your current nationality is limiting your ability to freely travel, bank, invest or feel secure, a second citizenship/passport will open up a world of new possibilities for you and your family. Qualified applicants can enjoy greater freedom and increased stability for themselves, their spouse, and any number of dependent (children, siblings, parents, etc).</p>
 							<ul class="actions stacked">
-								<li><a href="#contact" class="button big wide smooth-scroll-middle">Learn More</a></li>
+								<li><a href="#contact" class="button big wide smooth-scroll-middle" id="business-button">Learn More</a></li>
 							</ul>
 						</div>
 						<div class="image">
