added copyright info

--- a/index.html
+++ b/index.html
@@ -437,9 +437,9 @@
 					</footer>
 				-->
 					<footer class="wrapper style1 align-center">
-						<dd>
-							<p>Maybe have some text inside the footer</p>
-						</dd>
+						<div class="inner">
+							<p>&copy; Citizenship by Investment. Images: <a href="https://unsplash.com/">Unsplash</a> Design: <a href="https://html5up.net">HTML5 UP</a></p>
+						</div>
 					</footer>	
 
 			</div>
