--- a/index.html
+++ b/index.html
@@ -453,6 +453,6 @@
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 			<script src="assets/js/language.js"></script>
-
+			<script src="assets/js/email.js"></script>
 	</body>
 </html>
