--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
 						<div class="inner medium">
 							<h2>Get in touch to learn more</h2>
 							<h3>We can easily arrange online video meetings early into the process, to help provide you with any additional details.</h3>
-							<form method="submit">
+							<form>
 								<div class="fields">
 									<div class="field half">
 										<label for="name">Name</label>
