Small editing (country list, etc)

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Successful Track Record</h2>
-							<p>Our team already has a lengthy proven track-record of applicants, and we have assisted numerous clients from around the world, including applicants from jurisdictions such as <b>Lebanon</b>, <b>Nigeria</b>, <b>Canada</b>, <b>Libya</b>, <b>Germany</b>, <b>Japan</b>, etc., to obtain citizenship.</p>
+							<p>Our team already has a lengthy proven track-record of applicants, and we have assisted numerous clients from around the world, including applicants from jurisdictions such as <b>Lebanon</b>, <b>Nigeria</b>, <b>Canada</b>, <b>China</b>, <b>Libya</b>, <b>Germany</b>, <b>Japan</b>, etc., to obtain citizenship.</p>
 							<p>Our team also facilitates citizenship applications in any country that currently offers reputable economic citizenship programs <br>(currently including <i>Saint Lucia</i>, <i>Antigua and Barbuda</i>, <i>Dominica</i>, <i>Grenada</i>, <i>Turkey</i>, <i>Malta</i>, and <i>Vanuatu</i>).</p>
 						</div>
 
@@ -256,7 +256,7 @@
 								<section>
 									<span class="icon style2 major fa-gem"></span>
 									<h3>Ease of Traveling</h3>
-									<p>Visa-free access to nearly 150 countries, including the United Kingdom (6 months for tourism, conferences, family and friends, etc), European Union (<a href="https://www.schengenvisainfo.com/schengen-visa-countries-list" target="_blank">Schengen Area</a> such as <b>Switzerland</b>, for a period of 3 months during a 6 months period, after the date of first entry in the Schengen Area, ETIAS required since 2023), Hong Kong, Singapore, etc., ease of residency applications in all <b><a href="https://caricom.org/member-states-and-associate-members" target="_blank">CARICOM</a></b> member countries, as well as opportunities to travel (or even work) in any of the <b><a href="https://www.oecs.org/en/who-we-are/about-us" target="_blank">OECS</a></b> member states.</p>
+									<p>Visa-free access to nearly 150 countries, including the United Kingdom (180 days for tourism, conferences, family, etc), the (<a href="https://www.schengenvisainfo.com/schengen-visa-countries-list" target="_blank">Schengen Area</a>, for a period of 3 months during a 6 months period with ETIAS), HK, Singapore, etc., ease of residency applications in all <b><a href="https://caricom.org/member-states-and-associate-members" target="_blank">CARICOM</a></b> member countries, as well as opportunities to travel (or even work) in any of the <b><a href="https://www.oecs.org/en/who-we-are/about-us" target="_blank">OECS</a></b> member states.</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-save"></span>
@@ -266,7 +266,7 @@
 								<section>
 									<span class="icon solid style2 major fa-chart-bar"></span>
 									<h3>Dependents</h3>
-									<p>You, your spouse, your dependents (depending on age and economical relationship <b>siblings</b>, <b>children</b>, <b>parents</b>, etc.) as well as your <b>descendants</b> can enjoy citizenship for life, family members can also be added later.</p>
+									<p>You, your spouse, your dependents (depending on age and economical relationship <b>siblings</b>, <b>children</b>, <b>parents</b>, etc.) as well as your <b>descendants</b> can enjoy citizenship for life, family members can also be added later, a second passport also increases chances for children to attend international universities with admission policies based on citizenship quota, etc.</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-wifi"></span>
