--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 								<section>
 									<span class="icon style2 major fa-gem"></span>
 									<h3>Ease of Traveling</h3>
-									<p>Visa-free access to nearly 150 countries, including the United Kingdom (180 days for tourism, conferences, family, etc), the (<a href="https://www.schengenvisainfo.com/schengen-visa-countries-list" target="_blank">Schengen Area</a>, for a period of 3 months during a 6 months period with ETIAS), HK, Singapore, etc., ease of residency applications in all <b><a href="https://caricom.org/member-states-and-associate-members" target="_blank">CARICOM</a></b> member countries, as well as opportunities to travel (or even work) in any of the <b><a href="https://www.oecs.org/en/who-we-are/about-us" target="_blank">OECS</a></b> member states.</p>
+									<p>Visa-free access to nearly 150 countries, including the United Kingdom (180 days for tourism, conferences, family, etc), the <b>(<a href="https://www.schengenvisainfo.com/schengen-visa-countries-list" target="_blank">Schengen Area</a></b>, for a period of 3 months during a 6 months period with ETIAS), HK, Singapore, etc., ease of residency applications in all <b><a href="https://caricom.org/member-states-and-associate-members" target="_blank">CARICOM</a></b> member countries, as well as opportunities to travel (or even work) in any of the <b><a href="https://www.oecs.org/en/who-we-are/about-us" target="_blank">OECS</a></b> member states.</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-save"></span>
