Adding a 16th question about forms & docs

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 								<section>
 									<span class="icon solid style2 major fa-leaf"></span>
 									<h3>Pristine Environment</h3>
-									<p>Saint Kitts and Nevis, an independent member of the <b>Commonwealth</b> since 1983 following independence from Britain, is well known and famous for its beautiful beaches, pristine tropical forests and friendly locals, Saint Kitts and Nevis is also very safe, walkable and has great weather.</p>
+									<p>Saint Kitts and Nevis, an independent <b>member of the Commonwealth since 1983</b> following independence from Britain, is well known and famous for its beautiful beaches, pristine tropical forests and friendly locals, Saint Kitts and Nevis is also very safe, walkable and has great weather.</p>
 								</section>
 							</div>
 							<ul class="actions stacked">
@@ -384,6 +384,10 @@
 												<dt>15. What is a police certificate and who is required to produce a police certificate?</dt>
 												<dd>
 													<p>A police certificate refers to a statement from a national law enforcement authority on the status of a person’s criminal record. It is also referred to as “certificate of no criminal record” or “police clearance record”. Each main applicant and all permitted dependents 16 years and older are required to produce a police certificate. Our team can easily provide you with support regarding the obtention of the certificate.</p>
+												</dd>
+												<dt>16. What kind of forms and documents need to be submitted to process the application?</dt>
+												<dd>
+													<p>There are a few forms (in PDF easily editable format) to complete, as well as certificates (e.g. birth certificate, police certificate, etc) to submit, copies of current passport as well as photographs, etc. Our team will guide you along the process and provide you with the full list of elements to assemble, to ensure a successfull application.</p>
 												</dd>
 											</dl>
 
