--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
 												</dd>
 												<dt>16. What kind of forms and documents need to be submitted to process the application?</dt>
 												<dd>
-													<p>There are a few forms (in PDF easily editable format) to complete, as well as certificates (e.g. birth certificate, police certificate, etc) to submit, copies of current passport as well as photographs, etc. Our team will guide you along the process and provide you with the full list of elements to assemble, to ensure a successfull application.</p>
+													<p>There are a few forms (in PDF easily editable format) to complete, as well as certificates (e.g. birth certificate, marriage certificate if applicable, police certificate, etc) to submit, copies of current passport as well as new passport-size photos, power of attorney, etc. Our team will guide you along the process and provide you with the full list of elements to assemble, to ensure a successfull application.</p>
 												</dd>
 											</dl>
 
