Spelling mistake fixed in SUBMITTED

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
 											<dl>
 												<dt>1. What are the requirements of becoming a Saint Kitts and Nevis citizen by investment?</dt>
 												<dd>
-													<p>The main applicant (often abbreviated “MA” during the process) must be at least eighteen (18) years of age, must have made an investment in the prescribed amount, and must meet other application requirements.</p>
+													<p>The "<b>Main Applicant</b>" (often abbreviated “<b>MA</b>” during the process) must be at least eighteen (18) years of age, must have made an investment in the prescribed amount, and must meet other application requirements.</p>
 												</dd>
 												<dt>2. Can I contact the "Citizenship by Investment Unit" (CIU) directly?</dt>
 												<dd>
@@ -335,7 +335,7 @@
 												</dd>
 												<dt>3. Are the application forms available online?</dt>
 												<dd>
-													<p>No, the application forms for Citizenship by Investment can only be obtained and also sdubmitted to the Citizenship by Investment Unit by an ‘Authorized Person’.</p>
+													<p>No, the application forms for Citizenship by Investment can only be obtained and also submitted to the Citizenship by Investment Unit by an ‘Authorized Person’.</p>
 												</dd>
 												<dt>4. How long does the application process take?</dt>
 												<dd>
@@ -387,7 +387,7 @@
 												</dd>
 												<dt>16. What kind of forms and documents need to be submitted to process the application?</dt>
 												<dd>
-													<p>There are a few forms (in PDF easily editable format) to complete, as well as certificates (e.g. birth certificate, marriage certificate if applicable, police certificate, etc) to submit, copies of current passport as well as new passport-size photos, power of attorney, etc. Our team will guide you along the process and provide you with the full list of elements to assemble, to ensure a successfull application.</p>
+													<p>There are a few forms (in PDF easily editable format) to complete, as well as certificates (e.g. birth certificate, marriage certificate if applicable, police certificate, etc) to submit, copies of current passport as well as new passport-size photos, power of attorney, etc. Our <b>team will guide you along the process</b> and provide you with the full list of elements to assemble, to ensure a successfull application.</p>
 												</dd>
 											</dl>
 
