--- a/index-spanish.html
+++ b/index-spanish.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>CITIZENSHOP BY INVESTMENT PROGRAMME</title>
+		<title>CITIZENSHIP BY INVESTMENT PROGRAMME</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -30,7 +30,7 @@
 				<!-- One -->
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
-							<h1 id="banner-title">CITIZENSHIP</h1>
+							<h1 id="banner-title">CITIZENSHIP - but it's Spanish</h1>
 							<p class="major" id="banner-body">BY INVESTMENT PROGRAMME</p>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle" id="banner-button">Get Started</a></li>
